--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,13 @@
 title: Legos for the Blind
 email: matshifrin@aol.com
 description: > # This is the home of text-based instructions for commercially-available LEGO sets, which can be built independently by blind or visually impaired people.
-baseurl: ""
+baseurl: "/legos-for-the-blind/"
 url: http://legosfortheblind.com/
 twitter_username: 
 github_username: 
 facebook_page: 
 youtube_username:
+
 collections: 
   instructions:
     output: true
