--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Legos for the Blind
 email: matshifrin@aol.com
 description: > # This is the home of text-based instructions for commercially-available LEGO sets, which can be built independently by blind or visually impaired people.
-baseurl: "/legos-for-the-blind/"
+baseurl: /legos-for-the-blind
 url: http://legosfortheblind.com/
 twitter_username: 
 github_username: 
