--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Legos for the Blind
 email: matshifrin@aol.com
-url: "http://legosfortheblind.com"
-baseurl: "/legos-for-the-blind"
+url: "http://legosfortheblind.com/"
+baseurl: "legos-for-the-blind"
 collections: 
   instructions:
     output: true
