getting paths to work

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Legos for the Blind
 email: matshifrin@aol.com
+url: http:/kevinyma.github.io/legos-for-the-blind
 baseurl: /legos-for-the-blind
 collections: 
   instructions:
