--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Legos for the Blind
+title: Lego for the Blind
 email: matshifrin@aol.com
 url: http:/kevinyma.github.io
-baseurl: /legos-for-the-blind
+baseurl: /lego-for-the-blind
 collections: 
   instructions:
     output: true
