--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: lego for the blind
 email: matshifrin@aol.com
-url: http:/kevinyma.github.io
-baseurl: /legos-for-the-blind
+url: legofortheblind.com
+baseurl: legofortheblind.com
 collections: 
   instructions:
     output: true
