--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: lego for the blind
 email: matshifrin@aol.com
 url: legofortheblind.com
-baseurl: legofortheblind.com
+baseurl:
 collections: 
   instructions:
     output: true
